force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/Apttus_Config2__TempRenewAssetGroup__c.object-meta.xml
<CustomObject>
    <description>Temporary object to store renew asset group processed by RenewOpportunityJob</description>
    <label>Temp Renew Asset Group</label>
    <nameField>
        <displayFormat>RG-{0000000}</displayFormat>
        <label>Group Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Renew Asset Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>