force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated product configuration</description>
    <inlineHelpText>ID of the associated product configuration</inlineHelpText>
    <label>Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Temp Renew Asset Groups</relationshipLabel>
    <relationshipName>TempRenewAssetGroups</relationshipName>
    <type>Lookup</type>
</CustomField>