force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndDate__c</fullName>
    <description>The renewal end date</description>
    <inlineHelpText>The renewal end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>