force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__ExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExecutionMode__c</fullName>
    <description>The renewal execution mode</description>
    <inlineHelpText>The renewal execution mode</inlineHelpText>
    <label>Execution Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>OnDemand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>