force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__GroupFieldValues__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupFieldValues__c</fullName>
    <description>The group field values</description>
    <inlineHelpText>The group field values</inlineHelpText>
    <label>Group Field Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>