force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__SourceBusinessObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceBusinessObjectId__c</fullName>
    <description>ID of the business object associated with the auto renewal. Only applicable for &quot;AUTO&quot; execution mode.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the business object associated with the auto renewal. Only applicable for &quot;AUTO&quot; execution mode.</inlineHelpText>
    <label>Source Business Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>