force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartDate__c</fullName>
    <description>The renewal start date</description>
    <inlineHelpText>The renewal start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>