force-app/main/default/objects/Apttus_Config2__TempRenewAssetGroup__c/fields/Apttus_Config2__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Status__c</fullName>
    <description>The renewal status</description>
    <inlineHelpText>The renewal status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Renew Assets</fullName>
            </value>
            <value>
                <fullName>Apply Rule</fullName>
            </value>
            <value>
                <fullName>Update Price</fullName>
            </value>
            <value>
                <fullName>Sync Cart</fullName>
            </value>
            <value>
                <fullName>Create Opportunity</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>